--- a/css/style.css
+++ b/css/style.css
@@ -324,11 +324,12 @@ header::after {
 .about-me-container p {
   margin-top: 0;
   color: #222831;
-  padding-right: 3rem;
-  width: 80%;
 }
 .about-me-container .about-me-content {
   line-height: 1.3rem;
+}
+.about-me-container .about-me-content p {
+  width: 70%;
 }
 .about-me-container .about-me-content .read-btn {
   font-size: calc(0.5vw + 0.6rem);
@@ -405,6 +406,7 @@ header::after {
   text-align: center;
   -webkit-box-shadow: 5px 8px 10px 2px rgba(34, 40, 49, 0.3);
           box-shadow: 5px 8px 10px 2px rgba(34, 40, 49, 0.3);
+  text-align: center;
 }
 .about-me-container .skills .skill-container .skill-column i {
   font-size: 3rem;
@@ -805,12 +807,13 @@ header::after {
   color: #005075;
 }
 .contact-form .form-container .form .form-group input, .contact-form .form-container .form .form-group textarea {
-  padding: 1.2rem 0.5rem;
+  padding: 1rem 0.5rem;
   width: 50%;
   outline: none;
   resize: none;
   border: 1px solid #f0f0f0;
   font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.2rem;
   -webkit-box-shadow: 5px 5px 0 0 rgba(0, 0, 0, 0.3);
           box-shadow: 5px 5px 0 0 rgba(0, 0, 0, 0.3);
 }
