--- a/css/style.scss
+++ b/css/style.scss
@@ -286,12 +286,13 @@ header {
     p {
         margin-top: 0;
         color: $colorOffBlack; 
-        padding-right: 3rem;
-        width: 80%;
     }
     
     .about-me-content {
         line-height: 1.3rem;
+        p {
+            width: 70%;
+        }
         .read-btn{
             font-size: calc(0.5vw + .6rem);
             padding: 0.5rem 1rem;
@@ -357,6 +358,7 @@ header {
             padding: 1rem;
             text-align: center;
             box-shadow: 5px 8px 10px 2px rgba($color: $colorOffBlack, $alpha: 0.3);
+            text-align: center;
             i{
                 font-size: 3rem;
                 color: $navLinkColor;
@@ -695,12 +697,13 @@ align-items: center;
                     }
                 }
                 input, textarea{
-                    padding: 1.2rem .5rem;
+                    padding: 1rem .5rem;
                     width: 50%;
                     outline: none;
                     resize: none;
                     border: 1px solid $colorLightGray;
                     font-family: Arial, Helvetica, sans-serif;
+                    font-size: 1.2rem;
                     box-shadow: 5px 5px 0 0 rgba($color: black, $alpha: 0.3);
                     @include mediaQuery780px(){
                         width: 70%;
