--- a/css/style.css
+++ b/css/style.css
@@ -373,7 +373,7 @@ header::after {
 .about-me-container .about-me-content h1 {
   color: #fc6d85;
   margin: 0;
-  padding-bottom: 1rem;
+  padding-bottom: 1.5rem;
 }
 .about-me-container .about-me-content p {
   letter-spacing: 0.06rem;
@@ -622,7 +622,7 @@ header::after {
   background: #fc6d85;
   font-size: 1.5rem;
   cursor: pointer;
-  color: #222831;
+  color: #fafafa;
   position: relative;
   z-index: 1;
 }
@@ -631,7 +631,7 @@ header::after {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: #fafafa;
+  background: #222831;
   top: 0;
   left: 0;
   z-index: -1;
