--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ html::-webkit-scrollbar {
   width: 1rem;
 }
 html::-webkit-scrollbar-thumb {
-  background: #fc6d85;
+  background: #ff5a76;
 }
 html::-webkit-scrollbar-track {
   background: #f0f0f0;
@@ -19,9 +19,7 @@ html::-webkit-scrollbar-track {
 body {
   padding: 0;
   margin: 0;
-  /* font-family: 'Quicksand', sans-serif; */
   overflow-x: hidden;
-  font-size: calc(0.5vw + 0.6rem);
 }
 
 header {
@@ -39,7 +37,6 @@ header {
       -ms-flex-direction: column;
           flex-direction: column;
   min-height: 100vh;
-  background-color: #005075;
   -webkit-clip-path: polygon(47% 0, 100% 0, 100% 85%, 0 100%, 0 80%, 0 0);
           clip-path: polygon(47% 0, 100% 0, 100% 85%, 0 100%, 0 80%, 0 0);
 }
@@ -54,7 +51,7 @@ header::after {
   z-index: -1;
   -webkit-filter: brightness(60%);
           filter: brightness(60%);
-  opacity: 0.5;
+  opacity: 0.7;
 }
 
 .wrapper {
@@ -117,10 +114,10 @@ header::after {
   left: -100%;
 }
 .navbar .my-logo {
-  color: #fc6d85;
+  color: #ff5a76;
   text-decoration: none;
   padding: 0.3rem 1rem;
-  border: 2px solid #fc6d85;
+  border: 2px solid #ff5a76;
   font-size: 1.5rem;
   /* transition: 0.2s ease-in-out; */
   /*  &:hover {
@@ -171,7 +168,7 @@ header::after {
 }
 .navbar ul li a::after {
   content: "";
-  background: #fc6d85;
+  background: #ff5a76;
   display: block;
   width: 100%;
   height: 2px;
@@ -184,7 +181,7 @@ header::after {
   transition: 0.2s ease-in;
 }
 .navbar ul li a:hover {
-  color: #fc6d85;
+  color: #ff5a76;
 }
 .navbar ul li a:hover::after {
   -webkit-transform: scaleX(1);
@@ -236,7 +233,7 @@ header::after {
   margin: 0;
 }
 .container .orange-text {
-  color: #fc6d85;
+  color: #ff5a76;
 }
 .container .intro-content p {
   margin: 0.8rem 0;
@@ -248,7 +245,7 @@ header::after {
 .container .intro-content .cv-btn {
   text-decoration: none;
   padding: 0.5rem 1rem;
-  background: #fc6d85;
+  background: #ff5a76;
   border: none;
   cursor: pointer;
   font-size: calc(0.5vw + 0.6rem);
@@ -260,7 +257,7 @@ header::after {
 }
 .container .intro-content .cv-btn:hover {
   background: #fafafa;
-  color: #005075;
+  color: #007fb1;
 }
 .container .intro-content .soft-skill-list {
   padding: 0;
@@ -274,7 +271,7 @@ header::after {
 }
 .container .intro-content .soft-skill-list li::before {
   content: "✔";
-  color: #fc6d85;
+  color: #ff5a76;
   padding-right: 0.5rem;
 }
 
@@ -334,7 +331,7 @@ header::after {
 .about-me-container .about-me-content .read-btn {
   font-size: calc(0.5vw + 0.6rem);
   padding: 0.5rem 1rem;
-  background: #fc6d85;
+  background: #ff5a76;
   border: none;
   cursor: pointer;
   color: #fafafa;
@@ -362,7 +359,7 @@ header::after {
           transform-origin: left;
 }
 .about-me-container .about-me-content .read-btn:hover {
-  color: #005075;
+  color: #222831;
 }
 .about-me-container .about-me-content .read-btn:hover::after {
   -webkit-transform-origin: left;
@@ -371,7 +368,7 @@ header::after {
           transform: scaleX(1);
 }
 .about-me-container .about-me-content h1 {
-  color: #fc6d85;
+  color: #ff5a76;
   margin: 0;
   padding-bottom: 1.5rem;
 }
@@ -412,7 +409,7 @@ header::after {
   font-size: 3rem;
   color: #132743;
   padding-bottom: 0.5rem;
-  color: #fc6d85;
+  color: #ff5a76;
 }
 
 /* Modal Section */
@@ -463,7 +460,7 @@ header::after {
   padding: 4rem 0 1rem 0;
 }
 .modal-container .modal-content h1 {
-  color: #fc6d85;
+  color: #ff5a76;
 }
 .modal-container .modal-content .paragraph {
   letter-spacing: 0.05rem;
@@ -548,20 +545,20 @@ header::after {
   bottom: -10px;
 }
 .section-4 .landing-page-container .landing-page-content .landing-page-column .description .view-github-button .view-btn {
-  background: #fc6d85;
+  background: #ff5a76;
   padding: 0.5rem 1rem;
   margin-left: 0.5rem;
-  border: 1px solid #fc6d85;
+  border: 1px solid #ff5a76;
   -webkit-transition: 0.2s ease-in-out;
   transition: 0.2s ease-in-out;
 }
 .section-4 .landing-page-container .landing-page-content .landing-page-column .description .view-github-button .view-btn:hover {
   background: transparent;
-  color: #fc6d85;
+  color: #ff5a76;
 }
 .section-4 .landing-page-container .landing-page-content .landing-page-column img {
   width: 100%;
-  max-height: 550px;
+  height: 280px;
   border-bottom: 0.5px solid #fafafa;
 }
 .section-4 .landing-page-container .landing-page-content .landing-page-column a {
@@ -614,12 +611,12 @@ header::after {
   color: #fafafa;
 }
 .section-5 .banner-content .inner-banner .orange-text {
-  color: #fc6d85;
+  color: #ff5a76;
 }
 .section-5 .banner-content .btn-div .contact-btn {
   padding: 0.6rem 2rem;
   border: none;
-  background: #fc6d85;
+  background: #ff5a76;
   font-size: 1.5rem;
   cursor: pointer;
   color: #fafafa;
@@ -651,8 +648,7 @@ header::after {
 
 /* Section 6, mini projects */
 .section-6 {
-  background: #f0f0f0;
-  min-height: 80vh;
+  min-height: 90vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -724,17 +720,17 @@ header::after {
   bottom: -10px;
 }
 .section-6 .mini-project-content .mini-inner-content .view-github-button .view-btn {
-  background: #fc6d85;
+  background: #ff5a76;
   padding: 0.5rem 1rem;
   margin-left: 0.5rem;
   -webkit-transition: 0.2s ease-in-out;
   transition: 0.2s ease-in-out;
   color: #fafafa;
-  border: 1px solid #fc6d85;
+  border: 1px solid #ff5a76;
 }
 .section-6 .mini-project-content .mini-inner-content .view-github-button .view-btn:hover {
   background: transparent;
-  color: #fc6d85;
+  color: #ff5a76;
 }
 .section-6 .mini-project-content .mini-inner-content a {
   text-decoration: none;
@@ -747,12 +743,12 @@ header::after {
 }
 .section-6 .mini-project-content .mini-inner-content .img-div img {
   width: 100%;
-  max-height: 550px;
+  height: 280px;
 }
 
 /* Section 7, Contact Form */
 .contact-form {
-  background: #005075;
+  background: #f0f0f0;
   min-height: 50vh;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -768,7 +764,7 @@ header::after {
 .contact-form h1 {
   font-size: 2rem;
   text-align: center;
-  color: #fafafa;
+  color: #222831;
 }
 .contact-form .form-container {
   display: -webkit-box;
@@ -797,14 +793,14 @@ header::after {
   font-size: 1.2rem;
   cursor: pointer;
   border: none;
-  background: #fc6d85;
+  background: #ff5a76;
   color: #fafafa;
   -webkit-transition: 0.2s ease;
   transition: 0.2s ease;
 }
 .contact-form .form-container .form .form-group .btn:hover {
   background: #fafafa;
-  color: #005075;
+  color: #007fb1;
 }
 .contact-form .form-container .form .form-group input, .contact-form .form-container .form .form-group textarea {
   padding: 1rem 0.5rem;
@@ -813,9 +809,9 @@ header::after {
   resize: none;
   border: 1px solid #f0f0f0;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 1.2rem;
-  -webkit-box-shadow: 5px 5px 0 0 rgba(0, 0, 0, 0.3);
-          box-shadow: 5px 5px 0 0 rgba(0, 0, 0, 0.3);
+  font-size: 1rem;
+  -webkit-box-shadow: 5px 8px 10px 0 rgba(0, 0, 0, 0.3);
+          box-shadow: 5px 8px 10px 0 rgba(0, 0, 0, 0.3);
 }
 @media (max-width: 780px) {
   .contact-form .form-container .form .form-group input, .contact-form .form-container .form .form-group textarea {
@@ -848,7 +844,7 @@ header::after {
 /* Back to Top */
 .back-to-top {
   text-align: center;
-  background: #005075;
+  background: #007fb1;
 }
 .back-to-top a {
   text-decoration: none;
@@ -859,7 +855,7 @@ header::after {
 /* Footer */
 .footer {
   min-height: 20vh;
-  background: #005075;
+  background: #007fb1;
   color: #fafafa;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -896,7 +892,7 @@ header::after {
   }
 }
 .footer .footer-content .footer-col {
-  width: 48%;
+  width: 33%;
 }
 @media (max-width: 680px) {
   .footer .footer-content .footer-col {
@@ -914,7 +910,7 @@ header::after {
   transition: 0.2s ease-in-out;
 }
 .footer .footer-content .footer-col a i:hover {
-  color: #fc6d85;
+  color: #ff5a76;
 }
 .footer .footer-content .icons {
   text-align: right;
